<resources>
    <string name="app_name">RaindropApp</string>

    <string name="prompt_email">Enter your email address</string>
    <string name="prompt_password">Enter your password</string>
    <string name="prompt_search">Search</string>

    <string name="action_login">Login</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_theme">Theme</string>
    <string name="title_change_password">Change Password</string>

    <string name="base_url_service">https://tcss450-2022au-group6.herokuapp.com/</string>
    <string name="base_url_auth">https://tcss450-2022au-group6.herokuapp.com/</string>

    <string name="action_search">Search</string>
    <string name="action_link">Full Post</string>
    <string name="action_chat_room">Chat</string>

    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_weather">Weather</string>
    <string name="title_chat">Chat</string>

    <string name="label_home">Welcome Home %1$s!</string>
    <string name="text_username">%1$s</string>
    <string name="text_contact_status">%1$s</string>


    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_new_password_again">Retype New Password</string>
    <string name="action_log_in_short">Log in</string>
    <string name="action_register_short">Register</string>
    <string name="action_change_password_short">Change Password</string>
    <string name="display_header_title">Phish Shows Welcomes:</string>
    <string name="image_description_logo">The Phish Logo</string>
    <string name="password_requirement">Use 7 or more characters with a mix of letters, numbers &amp; symbols</string>
    <string name="hint_verify">Verification Code</string>
    <string name="action_verify_short">Verify</string>

    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_log_out">Log Out</string>

    <string name="text_chat_members">%1$s</string>
    <string name="text_chat_preview">%1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_blank">Blank text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>