<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.uwnetid.raindropapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.uwnetid.raindropapp.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.tcss450.uwnetid.raindropapp.ui.contacts.ContactListFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contact_list" >
        <action
            android:id="@+id/action_navigation_contacts_to_contactFragment"
            app:destination="@id/contactFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.uwnetid.raindropapp.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/contactFragment"
        android:name="edu.uw.tcss450.uwnetid.raindropapp.ui.contacts.ContactFragment"
        android:label="@string/title_contacts" >
        <argument
            android:name="contact"
            app:argType="edu.uw.tcss450.uwnetid.raindropapp.ui.contacts.Contact" />
    </fragment>
    <fragment
        android:id="@+id/navigation_change_password"
        android:name="edu.uw.tcss450.uwnetid.raindropapp.ui.auth.password.ChangePasswordFragment"
        android:label="@string/title_change_password"
        tools:layout="@layout/fragment_change_password" />

</navigation>